tenzir/integration/data/reference/pipelines_local/test_zeek_tsv_pipeline_format/step_15.ref
error: printer `!` could not be found
 --> <input>:1:34
  |
1 | from stdin read zeek-tsv | write ! zeek-tsv --disable-timestamp-tags
  |                                  ^ 
  |
  = hint: must be one of bitz, csv, feather-store, json, lines, pcap, ssv, tsv, xsv, yaml, zeek-tsv
  = docs: https://docs.tenzir.com/next/formats